# trackml-library

./: LICENSE  pyproject.toml  setup.py
trackml/: dataset.py  randomize.py  score.py  utils.py  weights.py
