[tool.poetry]
name = "trackml"
version = "0.3.0"
description = ""
authors = ["Melvin Strobl <melvin.strobl@kit.edu>", "Moritz Kiehn <msmk@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
